# glic-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: effects.cpp  effects.hpp  glic.cpp  main.cpp  preset_loader.cpp
